Fix mysterious broken style
Was it Darkwing Duck?! :bird:

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -56,9 +56,9 @@ $happy_bright_blue: #D9EDF7
 
   .about-item
     background: white
-    min-height: 463px
+    min-height: 493px
     .happy-content
-      min-height: 220px
+      min-height: 250px
     .thumb
       height: 164px
 
